<resources>
    <string name="app_name" translatable="false">FinEx ETF</string>
    <string name="my_assets">My Assets</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="nothing_in_history">Nothing in History</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="add_sell">Add Sell</string>
    <string name="choose_fund">Choose Fund</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity</string>
    <string name="date_time_purchase">Date and time purchase</string>
    <string name="price_purchase">Price purchase</string>
    <string name="date_time_sell">Date and time sell</string>
    <string name="price_sell">Price sell</string>
    <string name="example_quantity">Example: 25 pcs.</string>
    <string name="example_date_time">Example: 18/10/2013 10:41</string>
    <string name="example_price">Example: 68.35₽</string>
    <string name="fields_is_empty">Fields is empty</string>
    <string name="date_time_type_invalid">Date and time type is invalid</string>
    <string name="purchase_has_been_added">Purchase has been added</string>
    <string name="sell_has_been_added">Sell has been added</string>
    <string name="nothing_in_assets">Nothing in Assets</string>
    <string name="split">Funds that had a split will be automatically split. Tap to know what it is.</string>
    <string name="you_don_t_have_enough_funds">You don\'t have enough funds</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="blog">Blog</string>
    <string name="about_finex_etf">About FinEx ETF</string>
    <string name="about_developer">About Developer</string>
    <string name="version">Version %1$s</string>
    <string name="show_exchange_rates">Show exchange rates</string>
    <string name="clear_image_cache">Clear image cache</string>
    <string name="image_cache_has_been_deleted">Image cache has been deleted</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="all_data_has_been_deleted">Data has been deleted</string>
    <string name="delete_all_data_summary">All data will be lost if you aren\'t backed it up</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="subject">Feedback FinEx ETF App</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="closed">Closed</string>
    <string name="account">Account</string>
    <string name="account_summary">Sign in to your Google Account</string>
    <string name="signed_in">Signed in as %1$s</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_summary">Do you want to sign out of your Google Account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="backup_data">Backup data</string>
    <string name="synced">Synced</string>
    <string name="fund_image">Fund image</string>
    <string name="attention_icon">Attention icon</string>
    <string name="placeholder_image">Placeholder image</string>
    <string name="add_sell_icon">Add sell icon</string>
    <string name="post_image">Post image</string>
    <string name="share_icon">Share icon</string>
    <string name="price_rub" translatable="false">%1$.2f₽</string>
    <string name="positive_change_rub" translatable="false">+%1$.2f₽ (+%2$.2f%%)</string>
    <string name="change_rub" translatable="false">%1$.2f₽ (%2$.2f%%)</string>
    <string name="price_usd" translatable="false">%1$.2f$</string>
    <string name="positive_change_usd" translatable="false">+%1$.2f$ (+%2$.2f%%)</string>
    <string name="change_usd" translatable="false">%1$.2f$ (%2$.2f%%)</string>
    <string name="price_eur" translatable="false">%1$.2f€</string>
    <string name="positive_change_eur" translatable="false">+%1$.2f€ (+%2$.2f%%)</string>
    <string name="change_eur" translatable="false">%1$.2f€ (%2$.2f%%)</string>
    <string name="price_kzt" translatable="false">%1$.2f₸</string>
    <string name="positive_change_kzt" translatable="false">+%1$.2f₸ (+%2$.2f%%)</string>
    <string name="change_kzt" translatable="false">%1$.2f₸ (%2$.2f%%)</string>
    <string name="quantity_pcs">%1$d pcs.</string>
    <string name="positive_quantity_pcs">+%1$.2f₽ (+%2$d pcs.)</string>
    <string name="negative_quantity_pcs">-%1$.2f₽ (-%2$d pcs.)</string>
    <string name="exchange_rates" translatable="false">1$ = %1$s₽ / 1€ = %2$s₽ / 1₸ = %3$s₽</string>
    <string name="delete_this_purchase">Delete this purchase?</string>
    <string name="delete_this_sell">Delete this sell?</string>
    <string name="delete_message">%1$s (%2$d pcs.)</string>
    <string name="you_have">You have %1$d pcs.</string>
    <string name="date_time_format">MMMM dd, yyyy \'at\' HH:mm a</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_summary">Welcome to unofficial FinEx ETF app! Swipe right to know how to use this app.</string>
    <string name="my_assets_summary">My assets tab, you can see the net worth of your entire portfolio and individual funds, as well as a list of the funds you own.</string>
    <string name="fund">Fund</string>
    <string name="fund_summary">Tap fund in \'My Assets\' tab to see information about it, like current price or description.</string>
    <string name="add_purchase_button">Add Purchase Button</string>
    <string name="add_purchase_button_summary">Tap this button will take you to the add purchase fund screen.</string>
    <string name="add_sell_button">Add Sell Button</string>
    <string name="add_sell_button_summary">Tap this button will take you to the add sell fund screen.</string>
    <string name="choose_fund_summary">Choose fund to add purchase/sell.</string>
    <string name="add_purchase_summary">Enter the quantity, purchase date and time, and purchase price. You can find this information in your broker account.</string>
    <string name="history_summary">In the \'History\' tab you can see all transactions (purchases and sales) in chronological order.</string>
    <string name="blog_summary">In the \'Blog\' tab you can see latest posts from FinEx ETF.</string>
    <string name="language">Language</string>
    <string name="country_flag_of_currency">Country flag of currency</string>
</resources>