<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="account"
        app:title="@string/account"
        app:summary="@string/account_summary"
        app:icon="@drawable/baseline_google_24" />

    <Preference
        app:key="backup_data"
        app:title="@string/backup_data"
        app:icon="@drawable/baseline_backup_enabled_24" />

    <CheckBoxPreference
        app:key="show_exchange_rates"
        app:title="@string/show_exchange_rates"
        app:icon="@drawable/baseline_exchange_rates_24" />

    <Preference
        app:key="clear_image_cache"
        app:title="@string/clear_image_cache"
        app:icon="@drawable/baseline_clear_image_cache_24" />

    <Preference
        app:key="delete_all_data"
        app:title="@string/delete_all_data"
        app:summary="@string/delete_all_data_summary"
        app:icon="@drawable/baseline_delete_all_data_24" />

    <Preference
        app:key="feedback"
        app:title="@string/send_feedback"
        app:summary="@string/feedback_summary"
        app:icon="@drawable/baseline_send_feedback_24" />

    <Preference
        app:key="about_finex_etf"
        app:title="@string/about_finex_etf"
        app:icon="@drawable/baseline_about_finex_etf_24" />

    <Preference
        app:key="about_developer"
        app:title="@string/about_developer"
        app:icon="@drawable/baseline_about_developer_24" />

    <Preference
        app:key="version"
        app:title="@string/version"
        app:icon="@drawable/baseline_version_24" />

</androidx.preference.PreferenceScreen>