<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".view.fragment.fund.AddFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimary"
            tools:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/split_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_split_linear_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/linear_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/split_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_split_24"
                        android:contentDescription="@string/attention_icon"
                        app:tint="@color/colorGreen" />

                    <TextView
                        android:id="@+id/split_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorGreen"
                        android:text="@string/split"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/split_linear_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_view"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:scaleType="centerInside"
                            android:contentDescription="@string/fund_image"
                            tools:src="@drawable/fxre" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/name_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textSize="18sp"
                                android:textColor="@color/colorText"
                                tools:text="FinEx US REIT UCITS ETF" />

                            <TextView
                                android:id="@+id/ticker_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textColor="@color/colorTextSecondary"
                                tools:text="FXRE" />

                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/quantity_text_input_layout"
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/quantity"
                        app:boxBackgroundColor="@color/colorSecondaryBackground"
                        app:helperText="@string/example_quantity"
                        app:startIconDrawable="@drawable/baseline_quantity_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantity_text_input_layout_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_time_text_input_layout"
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/date_time_purchase"
                        app:boxBackgroundColor="@color/colorSecondaryBackground"
                        app:helperText="@string/example_date_time"
                        app:startIconDrawable="@drawable/baseline_date_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_time_text_input_layout_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="datetime" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/price_text_input_layout"
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/price_purchase"
                        app:boxBackgroundColor="@color/colorSecondaryBackground"
                        app:helperText="@string/example_price"
                        app:startIconDrawable="@drawable/baseline_price_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_text_input_layout_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_button"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/add_purchase"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/shape_add_purchase_button" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>